--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,94 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* .box{
+max-width: 400px;
+margin: 40px auto;
+padding: 50px 30px 50px 30px;
+background-color: white;
+border: 1px solid #ddd;
+border-radius: 10px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+margin-top: 60px;
+}
+.box h1{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.mood{
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.mood span{
+    color: #337ab7;
+    animation: colorChange 5s infinite; 
+}
+.message{
+    font-size: 18px;
+    margin-bottom: 20px;
+    animation: colorChange 5s infinite;
+}
+@keyframes colorChange {
+    0% {
+        color: #f1e211;
+    }
+    25% {
+        color: #337ab7;
+    }
+    50% {
+        color: #f32f2c;
+    }
+    75% {
+        color: #3e8e41;
+    }
+    100% {
+        color: #1bb0f5;
+    }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.button{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
 }
+button{
+    width: 100px;
+    height: 40px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor:pointer;
+    transition: transform 0.2s ease, background-color 0.2s ease;
+}
+button:hover {
+    transform: scale(1.05);
+}
+.happy{
+    background-color: #dff0d8;
+    color: #3e8e41;
+}
+.happy:hover {
+    background-color: #3e8e41;
+    color:#dff0d8 ;
+}
+.sad{
+    background-color:#fcc773;
+    color: #f32f2c;
+}
+.sad:hover {
+    background-color:#f32f2c ;
+    color:#fcc773 ;
+}
+.angry{
+    background-color: #f8a790;
+    color: #a94442;
+}
+.angry:hover{
+    background-color: #a94442;
+    color:#f8a790 ;
+}
+.mood-image{
+    width: 250px;
+    margin-left: 65px;
+} */
